# slow-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PROJECT_STATE.md  README.md  install.sh  main.py  ontology.ttl  pyproject.toml  slow-ai-phase-1-init.md  slow-ai-phase-2-init.md
.claude/commands/: new-skill.md
.github/workflows/: ci.yml  pages.yml
app/: main.py
app/api/: brief.py  graph.py  interview.py  projects.py  runs.py
app/static/css/: app.css
app/templates/: base.html
app/templates/export/: run_export.html
app/templates/partials/: brief_ready.html  graph_agent_reply.html  sidebar.html  sidebar_projects.html
app/templates/views/: graph_review.html  home.html  interview.html  live_run.html  post_run.html  run.html
docs/: _config.yml  architecture.md  getting-started.md  how-it-works.md  index.html  index.md  known-issues.md  technical.md  technical_deep_dive.md  website.md  whats-next.md  workflow-ecosystem.md
other_docs/: design_decisions.md  design_v2.md  index.html  react_migration.md  technical.md
src/slow_ai/: config.py  logging_config.py  models.py  observability.py  utils.py
src/slow_ai/agents/: interviewer.py  orchestrator.py  report_agent.py  run_conversation.py  specialist.py
src/slow_ai/execution/: git_store.py  registry.py
src/slow_ai/llm/: __init__.py  registry.json
src/slow_ai/research/: __main__.py  runner.py
src/slow_ai/setup/: __main__.py
src/slow_ai/skills/: __init__.py  registry.json  resolver.py  synthesizer.py
src/slow_ai/skills/catalog/agricultural_policy_analysis/: SKILL.md
src/slow_ai/skills/catalog/api_integration/: SKILL.md
src/slow_ai/skills/catalog/browser_use/: SKILL.md
src/slow_ai/skills/catalog/claude_code_agent/: SKILL.md
src/slow_ai/skills/catalog/clinical_trials_search/: SKILL.md
src/slow_ai/skills/catalog/code_execution/: SKILL.md
src/slow_ai/skills/catalog/code_generation/: SKILL.md
src/slow_ai/skills/catalog/dashboard_development/: SKILL.md
src/slow_ai/skills/catalog/data_analysis/: SKILL.md
src/slow_ai/skills/catalog/data_modeling/: SKILL.md
src/slow_ai/skills/catalog/data_synthesis/: SKILL.md
src/slow_ai/skills/catalog/data_transformation/: SKILL.md
src/slow_ai/skills/catalog/data_visualization/: SKILL.md
src/slow_ai/skills/catalog/database_query/: SKILL.md
src/slow_ai/skills/catalog/dataset_inspection/: SKILL.md
src/slow_ai/skills/catalog/document_generation/: SKILL.md
src/slow_ai/skills/catalog/document_parsing/: SKILL.md
src/slow_ai/skills/catalog/economic_data_discovery/: SKILL.md
src/slow_ai/skills/catalog/economic_modeling/: SKILL.md
src/slow_ai/skills/catalog/environmental_data_analysis/: SKILL.md
src/slow_ai/skills/catalog/environmental_policy_analysis/: SKILL.md
src/slow_ai/skills/catalog/financial_analysis/: SKILL.md
src/slow_ai/skills/catalog/geospatial_data_discovery/: SKILL.md
src/slow_ai/skills/catalog/geospatial_ml_research/: SKILL.md
src/slow_ai/skills/catalog/geospatial_processing/: SKILL.md
src/slow_ai/skills/catalog/german_healthcare_expertise/: SKILL.md
src/slow_ai/skills/catalog/german_language_analysis/: SKILL.md
src/slow_ai/skills/catalog/graph_visualization/: SKILL.md
src/slow_ai/skills/catalog/healthcare_policy_analysis/: SKILL.md
src/slow_ai/skills/catalog/image_analysis/: SKILL.md
src/slow_ai/skills/catalog/interview_facilitation/: SKILL.md
src/slow_ai/tools/: browser_use_tool.py  code_execution.py  code_generation.py  perplexity.py  run_reader.py  url_fetch.py  web_browse.py
tests/: test_git_store.py  test_models.py  test_registry.py  test_runner.py  test_specialists.py  test_tools.py
website/: index.html
(+19 files in other folders)
