[project]
name = "slow-ai"
version = "0.1.0"
description = "Terminal-based interview agent that produces a validated problem brief"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.6",
    "pydantic>=2.0",
    "pydantic-ai[google]>=1.70.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "streamlit>=1.40.0",
]

[project.scripts]
slow-ai = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slow_ai"]
